testsuite/tests/typecheck/should_fail/tcfail004.alan
arrayParamErr() : proc
  foo(foo : byte []) : proc
  {
    writeString(foo);
  }
{
  foo("42\n");
}
